css/styles.css
.hidden {
    display: none !important;
}

body {
    background-color: #121212;
    color: white;
}

.bg-dark {
    background-color: black !important;
}

.project-header h2 {
    padding-left: 0px !important;
}

.underline-header {
    margin-top: 30px;
    border-bottom: 2px solid white;
}

.project-header {
    margin: 50px 0px;
}

.img-fluid {
    margin-bottom: 10px;
}

.bg-dark .list-group-item {
    color: white;
    text-decoration: none;
    background-color: #121212;
    border-color: #353535;
}

.header-h1 {
    margin: 45px 30px 50px 0px;
}

.navbar {
    margin-bottom: 30px;
}

.navbar a:hover {
    color: #7CA3C3;
}

.navbar .dropdown-item {
    color: rgba(255,255,255,.55);
}

.navbar .dropdown-item:hover {
    background-color: #7CA3C3;
    color: black;
}

.resume-header h2 {
    padding-left: 0px;
}

.project-section h3, .project-header h3, .resume-section h3, .resume-header h3 {
    padding: 2px 0px;
}

.project-section h3, .project-header h3 {
    margin: 10px 0px 30px 0px;
}

.resume-section h3, .resume-header h3 {
    margin: 10px 0px 10px 0px;
}

.resume-section h3 {
    margin: 50px 0px 20px;
}

/* Jobs */
.job {
    padding: 30px;
    border-right: 0px;
    border-left: 0px;
}

.job:first-child {
    border-top: 0px;
}

.job:last-child {
    border-bottom: 0px;
}

.job h4 {
    margin-bottom: 3px;
}

.job .role {
    margin-bottom: 0px;
}

.job .dates {
    font-style: italic;
}

.portfolio-header {
    margin-top: 120px;
}

.dropdown-label {
    display: block;
    width: 100%;
    padding: 0.25rem 1rem;
    clear: both;
    font-weight: 400;
    color: #212529;
    text-align: inherit;
    text-decoration: none;
    white-space: nowrap;
    background-color: transparent;
    border: 0;
    color: white;
}

.project a img {
    opacity: 1;
    transition: opacity .25s ease-in-out;
  -moz-transition: opacity .25s ease-in-out;
  -webkit-transition: opacity .25s ease-in-out;
}

.project-section a:hover img {
    opacity: 0.5;
    transition: opacity .25s ease-in-out;
  -moz-transition: opacity .25s ease-in-out;
  -webkit-transition: opacity .25s ease-in-out;
}

.project-col {
    margin-bottom: 100px;
}

.project-section .project-col a{
    color: #7CA3C3;
    text-decoration: underline;
}

.project-section .project-col a:hover {
    color: blue;
    text-decoration: underline;
}

/*Badges */

.badges {
    margin-bottom: 10px;
}

.badge-html {
    background-color: #268e3e;
}

.badge-css {
    background-color: blue;
}

.badge-js {
    background-color: #a1bf1a;
}

.badge-wp {
    background-color: navy;
}

.badge-php {
    background-color: #ff005d;
}

.badge-net {
    background-color: #9b0000;
}


.project-section p, .project-section a{
    margin-bottom: 4px;
}



.project-section p, .resume-section p{
    color: rgba(255,255,255,.55);
}

